--- a/bc_frontend/src/App.css
+++ b/bc_frontend/src/App.css
@@ -1,3 +1,24 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+#root {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .App {
   text-align: center;
+  width: 100%;
+  height: 100vh;
+  flex-direction: column;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  background-image: url("../public/images/bc_background.webp");
+}
+body {
+  display: flex;
 }
