--- a/bc_frontend/src/Nav.css
+++ b/bc_frontend/src/Nav.css
@@ -14,12 +14,14 @@ nav a {
 }
 nav a:hover {
     text-decoration: underline;
+    color:#fff;
 }
 nav a.active {
     font-weight: bold;
 }
 nav ul {
     list-style: none;
+    margin-bottom: 0;
     padding: 0.25rem;
     display: flex;
     flex-direction: row;
