--- a/bc_frontend/src/SearchBar.css
+++ b/bc_frontend/src/SearchBar.css
@@ -54,17 +54,18 @@ body {
 }
 
 .btn-search:focus~.input-search {
+    max-width: 40vw;
     width: 300px;
     border-radius: 0px;
     background-color: transparent;
     border-bottom: 1px solid rgba(255, 255, 255, .5);
-    transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+    transition: all 500ms cubic-bezier(0, 0, 1, 1);
 }
 
 .input-search:focus {
-    width: 300px;
+    max-width: 40vw;
     border-radius: 0px;
     background-color: transparent;
     border-bottom: 1px solid rgba(255, 255, 255, .5);
-    transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+    transition: all 500ms cubic-bezier(0, 0, 1, 1);
 }
