--- a/bc_frontend/src/StaticSearchBar.module.css
+++ b/bc_frontend/src/StaticSearchBar.module.css
@@ -24,6 +24,10 @@ body {
     border-bottom: 1px solid rgba(255, 255, 255, .5);
 }
 
+.input-search::placeholder {
+    color: rgba(0, 0, 0, 0.527);
+}
+
 .btn-search {
     border-style: none;
     font-size: 20px;
