--- a/bc_frontend/src/Leaderboard.css
+++ b/bc_frontend/src/Leaderboard.css
@@ -2,8 +2,10 @@
     max-width: 300px;
     width: 100%;
     max-height: 40vh;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.5)
+    height: fit-content;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 5px;
+    font-weight: bold;
 }
 
 .leaderboard-frame header {
