--- a/bc_frontend/src/App.css
+++ b/bc_frontend/src/App.css
@@ -11,16 +11,15 @@
 }
 .App {
   text-align: center;
-  width: 100%;
-  height: 100vh;
   flex-direction: column;
   display: flex;
-  justify-content: flex-start;
   align-items: center;
   background-image: url("../public/images/bc_background.webp");
-}
-body {
-  display: flex;
-  min-height: 100vh;
-  width: 100%;
+  top:0px;
+  bottom: 0px;
+  height: 100%;
+  background-repeat: repeat;
+  position: absolute;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
