--- a/bc_frontend/src/Nav.css
+++ b/bc_frontend/src/Nav.css
@@ -5,8 +5,13 @@ nav {
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
     max-height: 6vh;
+}
+@media screen and (max-width: 768px) {
+    nav {
+        padding: 0.75rem 10vw 0.75rem 10vw;
+    }
 }
 nav a {
     color: #fff;
@@ -37,20 +42,6 @@ nav li a, nav li input {
     display:flex;
     justify-content: space-around;
     align-items: center;
-}
-.Logo {
-    flex-grow: 0.5;
-    background-image: url("../public/images/brawlclub_logo.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: 50%;
-}
-.Logo li {
-    width: 100%;
-}
-.Logo li a {
-    width: inherit;
-    height: 100%;
 }
 .nav-elements {
     flex-grow: 1;
@@ -83,7 +74,6 @@ h2 {
 .menu {
   display: flex;
   flex-direction: row;
-  flex-grow: 1;
   list-style-type: none;
   margin: 0;
   padding: 0;
