--- a/bc_frontend/src/SearchBar.css
+++ b/bc_frontend/src/SearchBar.css
@@ -62,6 +62,7 @@ body {
 
 .input-search:focus {
     max-width: 40vw;
+    width: 300px;
     border-radius: 0px;
     background-color: transparent;
     border-bottom: 1px solid rgba(255, 255, 255, .5);
