--- a/bc_frontend/src/StaticSearchBar.module.css
+++ b/bc_frontend/src/StaticSearchBar.module.css
@@ -10,6 +10,7 @@ body {
 
 .input-search {
     height: 50px;
+    max-width: 75vw;
     border-style: none;
     padding: 10px;
     font-size: 17px;
