--- a/bc_frontend/src/common/Nav.css
+++ b/bc_frontend/src/common/Nav.css
@@ -7,6 +7,7 @@ nav {
     flex-direction: row;
     justify-content: space-evenly;
     max-height: 6vh;
+    min-height: 60px;
 }
 @media screen and (max-width: 768px) {
     nav {
