--- a/bc_frontend/src/player/Player.css
+++ b/bc_frontend/src/player/Player.css
@@ -1,5 +1,7 @@
 .Player{
-    flex-grow: 1;
+    flex-grow: 1 !important;
     width: 100vw;
-    padding-top: 30px
+    padding-top: 30px;
+    color: white;
+    font-weight: bold;
 }
