Add Player general stats

--- a/bc_frontend/src/player/Player.css
+++ b/bc_frontend/src/player/Player.css
@@ -5,3 +5,10 @@
     color: white;
     font-weight: bold;
 }
+
+
+@media screen and (min-width: 1200px) {
+    #Rating-and-stats {
+        padding-left: 1rem;
+    }
+}
