--- a/bc_frontend/src/player/PlayerBcRating.css
+++ b/bc_frontend/src/player/PlayerBcRating.css
@@ -1,10 +1,11 @@
 #BcRating {
     text-shadow: 1px 1px 1px black;
     max-height: max-content;
+    align-items: center;
 }
 #BcRating > img {
-    max-height: 6vh;
-    min-height: 60px;
+    max-height: 5vh;
+    min-height: 50px;
 }
 #BcRating > span {
     font-size: 1.5em;
