--- a/bc_frontend/src/player/PlayerProfile.css
+++ b/bc_frontend/src/player/PlayerProfile.css
@@ -17,6 +17,8 @@
 }
 #PlayerProfilePicture img {
     max-height: 8vh;
+    border: 1px solid #454545;
+    border-radius: 10px;
 }
 #PlayerIdentity span {
     width:max-content;
