--- a/bc_frontend/src/player/PlayerProfile.css
+++ b/bc_frontend/src/player/PlayerProfile.css
@@ -42,3 +42,7 @@
     transform: translate(-50%, -50%);
     font-size: 1rem;
 }
+#PlayerIdentity a, #PlayerIdentity a:visited {
+    color: inherit;
+    text-decoration: none;
+}
