--- a/bc_frontend/src/home/Leaderboard.css
+++ b/bc_frontend/src/home/Leaderboard.css
@@ -1,12 +1,14 @@
 .leaderboard-frame {
-    max-width: 300px;
+    max-width: 400px;
     width: 100%;
-    background-color: rgba(255, 255, 255, 0.5);
-    border-radius: 5px;
+    background-color: #3fe5ffa8;
+    border-radius: 10px;
     font-weight: bold;
+    border: 1px solid black;
 }
 
 .leaderboard-frame header {
     font-weight: bold;
     font-size:1.2em;
+    color: black;
 }
