--- a/bc_frontend/src/player/PlayerAreaGraph.css
+++ b/bc_frontend/src/player/PlayerAreaGraph.css
@@ -1,6 +1,7 @@
 .PlayerAreaGraph {
     background-color: #3fe5ffa8;
     border-radius: 10px;
+    border: 1px solid #353535;
     padding: 10px;
     margin-top: 1em;
     min-height: 27vh;
