Implement search on homepage's static search bar.
The Search can now effectively be used to search an existing player or
club, while it used to only redirect to players.

--- a/bc_frontend/src/home/StaticSearchBar.module.css
+++ b/bc_frontend/src/home/StaticSearchBar.module.css
@@ -38,3 +38,10 @@ body {
     background-color: rgba(117, 117, 117, 0.253);
     border-bottom: 1px solid rgba(255, 255, 255, .5);
 }
+.error-text {
+    color: #F01919;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    background-color:rgba(117, 117, 117, 0.253);
+}
