Change background image for a more uniform one
The previous had a very light center, that would cause accessibility
issues. This one is darker and more uniform.

--- a/bc_frontend/src/App.css
+++ b/bc_frontend/src/App.css
@@ -14,7 +14,7 @@
   flex-direction: column;
   display: flex;
   align-items: center;
-  background-image: url("../public/images/bc_background.webp");
+  background-image: url("../public/images/bc_background_2.png");
   top:0px;
   bottom: 0px;
   height: 100%;
