Change Nav New Home Screen New Footer New About Section Minor Color Change

--- a/bc_frontend/src/App.css
+++ b/bc_frontend/src/App.css
@@ -22,4 +22,17 @@
   position: absolute;
   overflow-x: hidden;
   font-family: 'Poppins', sans-serif;
+
+  /* hide scrollbar for IE, Edge and Firefox */
+-ms-overflow-style: none;
+scrollbar-width: none;
 }
+
+/* hide scrollbar for chrome, safari and opera */
+.App::-webkit-scrollbar {
+display: none;
+}
+
+
+
+
