--- a/bc_frontend/src/common/Footer.css
+++ b/bc_frontend/src/common/Footer.css
@@ -1,16 +1,61 @@
-.Footer {
+.copyrightsec{
+    display: flex;
+    background-color: rgba(0, 0, 0, 0.2);
+    flex-direction: row;
+    justify-content:center;
+    align-items: center;
+    box-shadow: inset 1px 0px 9px 2px #00000094;
+}
+.footer{
+    background-color: #2b336ae0;
+    width: -webkit-fill-available;
+}
+footer a {
+    color: gold;
+    text-decoration: none;
+}
+footer a:hover {
+    color:#fff;
+}
+footer a.active {
+    font-weight: bold;
+}
+.linksec{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content:center;
     align-items: center;
-    background-color: #333;
-    color: #fff;
-    width:100vw;
-    padding: 0.6rem;
-    position: relative;
-    bottom: 0;
+    padding-bottom: 0.5rem;
 }
-.Footer a {
-    color: #fff;
-    text-decoration: none;
+
+.copybtn {
+    --bs-btn-color: #fff;
+    --bs-btn-bg: #0d6efd;
+    /* --bs-btn-border-color: #0d6efd; */
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #0b5ed7;
+    --bs-btn-hover-border-color: #0a58ca;
+    --bs-btn-focus-shadow-rgb: 49, 132, 253;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #0a58ca;
+    /* --bs-btn-active-border-color: #0a53be; */
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #0d6efd;
+    --bs-btn-disabled-border-color: #0d6efd;
+}
+
+footer p:first-letter{
+    text-transform: uppercase;
+}
+footer p {
+color: #ffffff;
+font-family: "Adobe Caslon Pro", "Hoefler Text", Georgia, Garamond, Times, serif;
+/* letter-spacing:0.1em; */
+text-align:center;
+margin: 40px auto;
+text-transform: lowercase;
+/* line-height: 145%; */
+font-size: 12pt;
+font-variant: small-caps;
 }
