--- a/bc_frontend/src/common/Nav.css
+++ b/bc_frontend/src/common/Nav.css
@@ -1,13 +1,22 @@
 nav {
-    background-color: #333;
+  background: rgba(27, 47, 69, 0.9);
     color: #fff;
-    padding: 0.75rem 20vw 0.75rem 20vw;
+    /* padding: 0.75rem 20vw 0.75rem 20vw; */
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
     max-height: 6vh;
     min-height: 60px;
+    padding-left: 35px;
+    padding-right: 35px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    transition: top 0.3s; /* Transition effect when sliding down (and up) */
+   z-index: 1000000;
+   box-shadow: 10px 10px 5px #4a585c7a;
+   position: absolute;
+
 }
 @media screen and (max-width: 768px) {
     nav {
@@ -20,18 +29,17 @@ nav {
     }
 }
 nav a {
-    color: #fff;
+    color: #c5d3e0;
     text-decoration: none;
 }
 nav a:hover {
-    text-decoration: underline;
     color:#fff;
 }
 nav a.active {
     font-weight: bold;
 }
 nav a img {
-  min-height: 36px;
+  min-height: 50px;
 }
 nav ul {
     list-style: none;
@@ -51,6 +59,20 @@ nav li a, nav li input {
     display:flex;
     justify-content: space-around;
     align-items: center;
+    
+}
+nav ul li a {
+  display: inline-block;
+  height: 2.25em;
+  line-height: 2.25em;
+  padding: 0 1.25em;
+  border: 0;
+  border-radius: 8px;
+  box-shadow: inset 0 0 0 1px transparent;
+  text-decoration: none;
+}
+nav ul li a:hover {
+  background-color: rgba(222, 222, 222, 0.25);
 }
 .nav-elements {
     flex-grow: 1;
@@ -172,7 +194,7 @@ h2 {
     padding: 0.5em 0;
     width: 100%;
     color: white;
-    background-color: #222;
+    background-color: rgba(15, 29, 44, 0.959);
   }
   .menu > li:not(:last-child) {
     border-bottom: 1px solid #444;
