--- a/bc_frontend/src/common/SearchBar.css
+++ b/bc_frontend/src/common/SearchBar.css
@@ -68,3 +68,51 @@ body {
     border-bottom: 1px solid rgba(255, 255, 255, .5);
     transition: all 500ms cubic-bezier(0, 0, 1, 1);
 }
+
+
+.input-wrapper {
+	 position: relative;
+	 width: 500px;
+	 margin: 50px auto;
+}
+ .input-highlight {
+	 font-size: 30px;
+	 user-select: none;
+	 line-height: 70px;
+	 border-top: 3px solid white;
+	 position: absolute;
+	 left: 0;
+	 bottom: 0;
+	 max-width: 100%;
+	 height: 0;
+	 color: transparent;
+	 font-family: Roboto Slab, sans-serif;
+	 overflow: hidden;
+}
+ input {
+	 height: 60px;
+	 width: 100%;
+	 min-width: 100%;
+	 padding: 0;
+	 border-radius: 0;
+	 line-height: 70px;
+	 background-color: transparent;
+	 color: white;
+	 font-size: 30px;
+	 border: none;
+	 outline: none;
+	 border-bottom: 3px solid #333;
+	 font-family: Roboto Slab, sans-serif;
+}
+ input:focus + .input-highlight {
+	 border-top: 3px solid #fbc91b;
+}
+ 
+.searchsty{
+    border-radius: '10em';
+    background: linear-gradient(to right, #F0B6D5, #A38495);
+}
+
+
+
+
