--- a/bc_frontend/src/home/Home.css
+++ b/bc_frontend/src/home/Home.css
@@ -5,3 +5,69 @@
     width: 100vw;
     flex-grow: 1;
 }
+.bg-image{
+    background-image: url(../pub/bs3.jpg);
+    height: 100vh;
+    position: relative;
+    overflow: hidden;
+    width: -webkit-fill-available;
+    background-position: center;
+    box-shadow: 2px 4px 11px 2px #000000;
+}
+.mask{
+    height: -webkit-fill-available;
+    background: linear-gradient(
+        to bottom,
+        hsla(0, 0%, 0%, 0),
+        hsla(0, 0%, 0%, 89%));
+}
+
+.abtsec{
+    width: -webkit-fill-available;
+    min-height: 50em;
+    box-shadow: inset 1px 0px 9px 2px #00000094;
+    display: flex;
+    flex-direction: column;
+    padding-top: 30px;
+}
+.abthead{
+    color: #b4d9e7eb;
+    padding-block: 15px;
+    box-shadow: 13px -3px 20px 2px #000000;
+    border-radius: 50px;
+    /* background: linear-gradient( to right, hsl(222deg 15% 21% / 57%), rgb(35 33 131)); */
+}
+
+
+/* for the wave effect in the about header  */
+.wave {
+    background: linear-gradient(
+    315deg,
+    rgba(101, 0, 94, 1) 3%,
+    rgb(1, 38, 201) 38%,
+    rgb(23, 55, 231) 68%,
+    rgba(255, 25, 25, 1) 98%
+  );
+  animation: gradient 15s ease infinite;
+  background-size: 400% 400%;
+  background-attachment: fixed;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 0%;
+  }
+  50% {
+    background-position: 100% 100%;
+  }
+  100% {
+    background-position: 0% 0%;
+    }
+}
+.abtinfo{
+    color:#bec8ff;;
+    background-Color:rgba(125, 155, 223, 0.32);
+    /* max-Width:40vw; */
+    align-self: center;
+    border-radius: 30px;
+}
