minor change to leaderboard frame

--- a/bc_frontend/src/common/Footer.css
+++ b/bc_frontend/src/common/Footer.css
@@ -15,7 +15,6 @@
 
 }
 footer a {
-    color: gold;
     text-decoration: none;
 }
 footer a:hover {
@@ -33,27 +32,17 @@ footer a.active {
 }
 
 .copybtn {
-    --bs-btn-color: #fff;
-    --bs-btn-bg: #0d6efd;
+    color: #c5d3e0;
+    --bs-btn-color: #c5d3e0;
     /* --bs-btn-border-color: #0d6efd; */
-    --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #0b5ed7;
-    --bs-btn-hover-border-color: #0a58ca;
-    --bs-btn-focus-shadow-rgb: 49, 132, 253;
-    --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #0a58ca;
-    /* --bs-btn-active-border-color: #0a53be; */
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-    --bs-btn-disabled-color: #fff;
-    --bs-btn-disabled-bg: #0d6efd;
-    --bs-btn-disabled-border-color: #0d6efd;
 }
 
 footer p:first-letter{
     text-transform: uppercase;
 }
 footer p {
-color: #ffffff;
+    color: #c5d3e0;
 font-family: "Adobe Caslon Pro", "Hoefler Text", Georgia, Garamond, Times, serif;
 /* letter-spacing:0.1em; */
 text-align:center;
