--- a/bc_frontend/src/home/Home.css
+++ b/bc_frontend/src/home/Home.css
@@ -79,7 +79,15 @@
     border-radius: 30px;
 }
 
-
+.plo{
+  padding-top: 54px;
+    padding-bottom: 50px;
+    height: 555px;
+    max-height: 555px;
+}
+@media screen {
+  
+}
 .playlist{
   width: 100%;
   width: -moz-available;          /* WebKit-based browsers will ignore this. */
