--- a/bc_frontend/src/home/Home.css
+++ b/bc_frontend/src/home/Home.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
+
 .HomePage {
     display: flex;
     flex-direction: column;
@@ -5,7 +7,7 @@
     width: 100vw;
     flex-grow: 1;
 }
-.bg-image{
+.bgimage{
     background-image: url(../pub/bs3.jpg);
     height: 100vh;
     position: relative;
@@ -17,7 +19,7 @@
     background-position: center;
     box-shadow: 2px 4px 11px 2px #000000;
 }
-.mask{
+.bgmask{
     height: inherit;
     background: linear-gradient(
         to bottom,
@@ -38,6 +40,7 @@
     padding-bottom: 50px;
 }
 .abthead{
+  font-family: 'Lilita One', cursive;
     color: #b4d9e7eb;
     padding-block: 15px;
     box-shadow: 13px -3px 20px 2px #000000;
@@ -72,6 +75,7 @@
     }
 }
 .abtinfo{
+  font-family: 'Lilita One', cursive;
     color:#bec8ff;;
     background-Color:rgba(125, 155, 223, 0.32);
     /* max-Width:40vw; */
