--- a/bc_frontend/src/home/Leaderboard.css
+++ b/bc_frontend/src/home/Leaderboard.css
@@ -1,5 +1,5 @@
 .leaderboard-frame {
-    max-width: 400px;
+    min-width: 400px;
     width: 100%;
     background-color: #bcc6f3a8;
     border-radius: 10px;
