--- a/bc_frontend/src/common/Footer.css
+++ b/bc_frontend/src/common/Footer.css
@@ -11,7 +11,7 @@
     width: 100%;
     width: -moz-available;          /* WebKit-based browsers will ignore this. */
     width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
-    width: fill-available;
+    width: stretch;
 
 }
 footer a {
