--- a/bc_frontend/src/club-finder/ResultsTableLine.css
+++ b/bc_frontend/src/club-finder/ResultsTableLine.css
@@ -1,10 +1,10 @@
 .results-line {
-    cursor: pointer;
-    background-color: #3fe5ffa8;
+  cursor: pointer;
+  background-color: #3fe5ffa8;
 }
 .results-line:hover {
-    color: #F01919;
+  color: #f01919;
 }
 .results-line.even {
-    background-color: #37c1d6a8;
+  background-color: #37c1d6a8;
 }
