--- a/bc_frontend/src/home/Leaderboard.css
+++ b/bc_frontend/src/home/Leaderboard.css
@@ -1,15 +1,15 @@
 .leaderboard-frame {
-    min-width: 400px;
-    width: 100%;
-    background-color: #bcc6f3a8;
-    border-radius: 10px;
-    font-weight: bold;
-    /* border: 1px solid black; */
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.281), 0 6px 20px 0 rgba(0, 0, 0, 0.336);
+  min-width: 400px;
+  width: 100%;
+  background-color: #bcc6f3a8;
+  border-radius: 10px;
+  font-weight: bold;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.281),
+    0 6px 20px 0 rgba(0, 0, 0, 0.336);
 }
 
 .leaderboard-frame header {
-    font-weight: bold;
-    font-size:1.2em;
-    color: #123C45;
+  font-weight: bold;
+  font-size: 1.2em;
+  color: #123c45;
 }
