--- a/bc_frontend/src/common/SearchBar.css
+++ b/bc_frontend/src/common/SearchBar.css
@@ -1,118 +1,113 @@
 body {
-    margin: 0px;
-    padding: 0px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #130f40;
-    font-family: 'Lato' !important;
+  margin: 0px;
+  padding: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #130f40;
+  font-family: "Lato" !important;
 }
 
 .search-box {
-    width: fit-content;
-    height: fit-content;
-    position: relative;
+  width: fit-content;
+  height: fit-content;
+  position: relative;
 }
 
 .input-search {
-    height: 50px;
-    width: 50px;
-    border-style: none;
-    padding: 10px;
-    font-size: 18px;
-    letter-spacing: 2px;
-    outline: none;
-    border-radius: 25px;
-    transition: all .5s ease-in-out;
-    background-color: #F01919;
-    padding-right: 40px;
-    color: #fff;
+  height: 50px;
+  width: 50px;
+  border-style: none;
+  padding: 10px;
+  font-size: 18px;
+  letter-spacing: 2px;
+  outline: none;
+  border-radius: 25px;
+  transition: all 0.5s ease-in-out;
+  background-color: #f01919;
+  padding-right: 40px;
+  color: #fff;
 }
 
 .input-search::placeholder {
-    color: rgba(255, 255, 255, .5);
-    font-size: 14px;
-    font-weight: 100;
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 14px;
+  font-weight: 100;
 }
 
 .btn-search {
-    width: 50px;
-    height: 50px;
-    border-style: none;
-    font-size: 20px;
-    font-weight: bold;
-    outline: none;
-    cursor: pointer;
-    border-radius: 50%;
-    position: absolute;
-    right: 0px;
-    color: #ffffff;
-    background-color: transparent;
-    pointer-events: painted;
+  width: 50px;
+  height: 50px;
+  border-style: none;
+  font-size: 20px;
+  font-weight: bold;
+  outline: none;
+  cursor: pointer;
+  border-radius: 50%;
+  position: absolute;
+  right: 0px;
+  color: #ffffff;
+  background-color: transparent;
+  pointer-events: painted;
 }
 
-.btn-search:focus~.input-search {
-    max-width: 40vw;
-    width: 300px;
-    border-radius: 0px;
-    background-color: transparent;
-    border-bottom: 1px solid rgba(255, 255, 255, .5);
-    transition: all 500ms cubic-bezier(0, 0, 1, 1);
+.btn-search:focus ~ .input-search {
+  max-width: 40vw;
+  width: 300px;
+  border-radius: 0px;
+  background-color: transparent;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  transition: all 500ms cubic-bezier(0, 0, 1, 1);
 }
 
 .input-search:focus {
-    max-width: 40vw;
-    width: 300px;
-    border-radius: 0px;
-    background-color: transparent;
-    border-bottom: 1px solid rgba(255, 255, 255, .5);
-    transition: all 500ms cubic-bezier(0, 0, 1, 1);
+  max-width: 40vw;
+  width: 300px;
+  border-radius: 0px;
+  background-color: transparent;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  transition: all 500ms cubic-bezier(0, 0, 1, 1);
 }
-
 
 .input-wrapper {
-	 position: relative;
-	 width: 500px;
-	 margin: 50px auto;
+  position: relative;
+  width: 500px;
+  margin: 50px auto;
 }
- .input-highlight {
-	 font-size: 30px;
-	 user-select: none;
-	 line-height: 70px;
-	 border-top: 3px solid white;
-	 position: absolute;
-	 left: 0;
-	 bottom: 0;
-	 max-width: 100%;
-	 height: 0;
-	 color: transparent;
-	 font-family: Roboto Slab, sans-serif;
-	 overflow: hidden;
+.input-highlight {
+  font-size: 30px;
+  user-select: none;
+  line-height: 70px;
+  border-top: 3px solid white;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  max-width: 100%;
+  height: 0;
+  color: transparent;
+  font-family: Roboto Slab, sans-serif;
+  overflow: hidden;
 }
- input {
-	 height: 60px;
-	 width: 100%;
-	 min-width: 100%;
-	 padding: 0;
-	 border-radius: 0;
-	 line-height: 70px;
-	 background-color: transparent;
-	 color: white;
-	 font-size: 30px;
-	 border: none;
-	 outline: none;
-	 border-bottom: 3px solid #333;
-	 font-family: Roboto Slab, sans-serif;
+input {
+  height: 60px;
+  width: 100%;
+  min-width: 100%;
+  padding: 0;
+  border-radius: 0;
+  line-height: 70px;
+  background-color: transparent;
+  color: white;
+  font-size: 30px;
+  border: none;
+  outline: none;
+  border-bottom: 3px solid #333;
+  font-family: Roboto Slab, sans-serif;
 }
- input:focus + .input-highlight {
-	 border-top: 3px solid #fbc91b;
-}
- 
-.searchsty{
-    border-radius: '10em';
-    background: linear-gradient(to right, #F0B6D5, #A38495);
+input:focus + .input-highlight {
+  border-top: 3px solid #fbc91b;
 }
 
-
-
-
+.searchsty {
+  border-radius: "10em";
+  background: linear-gradient(to right, #f0b6d5, #a38495);
+}
